# rustynetwork

./: .gitignore  Cargo.toml  README.md
html/: index.html  main.css  main.js
src/: main.rs  neural_network.rs
