[package]
name = "rustynetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.163", features = ["derive"]}
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"]}
tower-http = {version = "0.4.0", features = ["util", "fs"] }
